--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
+    "ejs-locals": "^1.0.2",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
+    "nconf": "^0.10.0",
     "nodemon": "^1.17.1",
     "path": "^0.12.7",
     "serve-favicon": "^2.4.5"
