--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "bootstrap": "^4.0.0",
+    "bower": "^1.8.2",
     "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
     "ejs-locals": "^1.0.2",
     "express": "^4.16.3",
+    "hbs": "^4.0.1",
     "morgan": "^1.9.0",
     "nconf": "^0.10.0",
     "nodemon": "^1.17.1",
