--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "dependencies": {
-    "bootstrap": "^4.0.0",
+    "async": "^2.6.0",
     "bower": "^1.8.2",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
     "ejs-locals": "^1.0.2",
     "express": "^4.16.3",
     "hbs": "^4.0.1",
+    "mongodb": "^3.0.4",
+    "mongoose": "^5.0.10",
     "morgan": "^1.9.0",
     "nconf": "^0.10.0",
-    "nodemon": "^1.17.1",
+    "nodemon": "^1.17.2",
     "path": "^0.12.7",
-    "serve-favicon": "^2.4.5"
+    "serve-favicon": "^2.4.5",
+    "session": "^0.1.0"
   }
 }
