--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "async": "^2.6.0",
     "bower": "^1.8.2",
     "connect-mongo": "^2.0.1",
+    "connect-mongodb-session": "^2.0.1",
     "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
     "ejs-locals": "^1.0.2",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "hbs": "^4.0.1",
     "mongodb": "^3.0.4",
     "mongoose": "^5.0.10",
