--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "async": "^2.6.0",
+    "bluebird": "^3.5.1",
     "bower": "^1.8.2",
     "connect-mongo": "^2.0.1",
     "connect-mongodb-session": "^2.0.1",
