--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "hbs": "^4.0.1",
+    "jquery": "^3.3.1",
     "mongodb": "^3.0.4",
     "mongoose": "^5.0.10",
     "morgan": "^1.9.0",
