--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "ejs-locals": "^1.0.2",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "express3-handlebars": "^0.5.2",
+    "handlebars": "^4.0.11",
+    "handlebars-helper-formatdate": "^1.0.0",
     "hbs": "^4.0.1",
     "jquery": "^3.3.1",
+    "moment": "^2.21.0",
     "mongodb": "^3.0.4",
     "mongoose": "^5.0.10",
     "morgan": "^1.9.0",
