--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ artifacts/
 *.pidb
 *.svclog
 *.scc
+*.json
 
 # Chutzpah Test files
 _Chutzpah*
@@ -259,5 +260,3 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-/StackOverflowProject/config/config2.json
-/StackOverflowProject/config/config.json
