--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "mongoose": "^5.0.10",
     "morgan": "^1.9.0",
     "nconf": "^0.10.0",
+    "nodemailer": "^4.6.4",
     "nodemon": "^1.17.2",
+    "pagination": "^0.4.4",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "path": "^0.12.7",
     "serve-favicon": "^2.4.5",
     "session": "^0.1.0",
