--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express3-handlebars": "^0.5.2",
+    "fs": "^0.0.1-security",
     "handlebars": "^4.0.11",
     "handlebars-helper-formatdate": "^1.0.0",
     "hbs": "^4.0.1",
@@ -26,6 +27,8 @@
     "nodemon": "^1.17.2",
     "pagination": "^0.4.4",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-facebook-token": "^3.3.0",
     "passport-google-oauth": "^1.0.0",
     "path": "^0.12.7",
     "serve-favicon": "^2.4.5",
