--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
     "ejs-locals": "^1.0.2",
+    "elasticsearch": "^14.2.2",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express3-handlebars": "^0.5.2",
